Accordion overflow fix

--- a/docs/assets/sass/_layout.scss
+++ b/docs/assets/sass/_layout.scss
@@ -1,5 +1,5 @@
 body {
-  min-height: 150vh;
+  min-height: 100vh;
   margin: 0;
   display: flex;
 }
