--- a/styles/_autocomplete.scss
+++ b/styles/_autocomplete.scss
@@ -55,7 +55,7 @@
     top: calc(100% + 1px);
     left: 1px;
     right: 1px;
-    //max-height: 15em;
+    max-height: 15em;
     overflow: auto;
     color: var(--autocomplete-items-fg, var(--dark));
     background: var(--autocomplete-items-bg, var(--lighter));
