--- a/styles/_filter-by.scss
+++ b/styles/_filter-by.scss
@@ -70,6 +70,10 @@
         opacity: 1;
         max-height: 90vh;
         overflow: auto;
+
+        &.sim-filter--items:not(.sim-datalist) {
+          overflow: visible;
+        }
       }
     }
 
